Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136566

Qml Structured Value does not work with qml arrays

    XMLWordPrintable

Details

    • Linux/X11

    Description

      Qml value types and structured values are awesome!

      There seem to be slight differences in the handling of lists of value types and qml arrays of them. The attached project shows this difference with the construction of a dialog.
      Passing a qml array with a value type results in an empty list in the dialog property, passing the same as a QVariant constructed with QList<ValueType> assigns to the dialog property correctly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qtqmlteam Qt Qml Team User
            r.vitanov Rosen Vitanov
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes