QtQml: Fix code to assign lists to list properties

We need to figure out if the input is also a list, iterate that if
necessary, and deal with the various QVariant cases.

Amends commit b0fc028cb5a5dfa9e95640a32e9b38ca6df0734d.

Pick-to: 6.8
Fixes: QTBUG-136566
Change-Id: Iab7c2d18b7049eecd0327cbdb7e7c7592b2d2ad3
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 5ae82f7c04c4bc87f28b4d5b3766d3fee153a26d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 86f0576ec18b13bc3454fddd166d79e814f07936)